--- a/src/resources/wcag2.yml
+++ b/src/resources/wcag2.yml
@@ -146,6 +146,15 @@
 1.4.3:
   id: "wcag20:visual-audio-contrast-contrast"
   level: "wcag20:level_aa"
+  testClusters:
+    - passed: passed
+      failed: failed
+      tests:
+        - cssTextHasContrast
+    # - passed: "passed" # Test doesn't yet exist
+    #   failed: "failed"
+    #   tests: 
+    #     - foreAndBackgroundAreDefinedTogether
 1.4.4:
   id: "wcag20:visual-audio-contrast-scale"
   level: "wcag20:level_aa"
@@ -221,6 +230,10 @@
   id: "wcag20:navigation-mechanisms-focus-visible"
   level: "wcag20:level_aa"
   testClusters:
+    - passed: cannotTell  # Should also look at outline
+      failed: failed
+      tests:
+      - focusIndicatorVisible
 2.4.8:
   id: "wcag20:navigation-mechanisms-location"
   level: "wcag20:level_aaa"
@@ -237,7 +250,6 @@
     - passed: "cantTell"
       failed: "failed"
       type: stacking
-      log: true
       tests: 
         - documentLangIsISO639Standard
         - documentLangNotIdentified
