--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "scripts": {
     "test": "grunt test --verbose"
   },
-  "dependencies" : {
-    "jquery": ">1.4.2"
+  "dependencies": {
+    "jquery": ">1.4.2",
+    "commander": "^2.3.0",
+    "phantomjs": "^1.9.10"
   },
   "devDependencies": {
     "bower": "~1.3.9",
@@ -26,7 +28,9 @@
     "grunt-convert": "~0.1.5",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-gh-pages": "~0.8.1",
-    "grunt-bower-task": "~0.4.0"
+    "grunt-bower-task": "~0.4.0",
+    "grunt-contrib-copy": "^0.6.0",
+    "grunt-chmod": "^1.0.3"
   },
   "jam": {
     "dependencies": {
