--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "jquery": ">1.4.2",
     "commander": "^2.3.0",
-    "phantomjs": "^1.9.10"
+    "phantomjs": "^1.9.10",
+    "shelljs": "^0.3.0"
   },
   "devDependencies": {
     "bower": "~1.3.9",
@@ -30,7 +31,8 @@
     "grunt-gh-pages": "~0.8.1",
     "grunt-bower-task": "~0.4.0",
     "grunt-contrib-copy": "^0.6.0",
-    "grunt-chmod": "^1.0.3"
+    "grunt-chmod": "^1.0.3",
+    "grunt-contrib-clean": "^0.6.0"
   },
   "jam": {
     "dependencies": {
