--- a/src/resources/tests.yml
+++ b/src/resources/tests.yml
@@ -60,7 +60,7 @@ aInPHasADistinctStyle:
   tags:
     - "link"
     - "content"
-  callback: "aInPhasADistinctStyle"
+  callback: "aInPHasADistinctStyle"
 aLinkTextDoesNotBeginWithRedundantWord:
   type: "custom"
   testability: 0
@@ -1829,12 +1829,30 @@ framesetMustHaveNoFramesSection:
     - "frame"
   options:
     selector: "frameset:not(frameset:has(noframes))"
+headersAttrRefersToATableCell:
+  type: "custom"
+  testability: 1
+  title:
+    en: "Table cell headers attrtibutes must within the same table have an associated data cell with the same id"
+    nl: "Tabel cellen met een headers attribuut moeten binnen dezelfde tabel een overeenkomende data cel hebben in het id attribuut dezelfde waarde"
+  description:
+    en: ""
+    nl: ""
+  guidelines: []
+  tags:
+    - "headers"
+    - "td"
+    - "th"
+  callback: "headersAttrRefersToATableCell"
 headerH1:
-  type: "headingLevel      testability:       title:
-    en    "The h ead     following an h1 is not h3 through h6"
+  type: "headingLevel"
+  testability: 0
+  title:
+    en: "The header following an h1 is not h3 through h6"
     nl: "De header die volgt op een h1 is niet h3 tot h6"
   description:
-      en: "Header order should not skip a level. Do not follow a <code>h1</code> header with a <code>h3</code>, <code>h4</code>, <code>h5</code>, or     ode>h6</code>."       nl:ecode>, <code>h5</code>, of <code>h6</code>."
+    en: "Header order should not skip a level. Do not follow a <code>h1</code> header with a <code>h3</code>, <code>h4</code>, <code>h5</code>, or <code>h6</code>."
+    nl: "Headers mogen geen niveau overslaan. Laat een <code>h1</code>-header niet volgen door een <code>h3</code>, <code>h4</code>, <code>h5</code>, of <code>h6</code>."
   guidelines:
     wcag:
       2.4.6:
