--- a/src/resources/tests.yml
+++ b/src/resources/tests.yml
@@ -2105,6 +2105,24 @@ idRefHasCorrespondingId:
         techniques:
           - "F17"
   callback: "idRefHasCorrespondingId"
+idrefsHasCorrespondingId:
+  type: "custom"
+  testability: 1
+  title:
+    en: "Elements with an idref attribute must correspond to an element with an ID"
+    nl: "Elementen met een idref-attribuut moeten corresponderen met een element met een ID"
+  description:
+    en: ""
+    nl: ""
+  guidelines:
+    wcag:
+      1.3.1:
+        techniques:
+          - "F17"
+      4.1.1:
+        techniques:
+          - "F17"
+  callback: "idrefsHasCorrespondingId"
 iIsNotUsed:
   type: "selector"
   testability: 1
