- Changed test for aMustContainText to test for hidden element. - Changed test definition for buttonHasName in tests.yml

--- a/src/resources/tests.yml
+++ b/src/resources/tests.yml
@@ -666,7 +666,7 @@ boldIsNotUsed:
     - "content"
   options:
     selector: "bold"
-buttonHasValue:
+buttonHasName:
   type: "placeholder"
   testability: 1
   title:
@@ -693,7 +693,6 @@ buttonHasValue:
   options:
     content: true
     empty: true
-    attribute: "value"
     selector: "button"
 checkboxHasLabel:
   type: "label"
