- Added inapplicable for display none to placehoder component test. - Added title test to buttonHasName test

--- a/src/resources/tests.yml
+++ b/src/resources/tests.yml
@@ -693,6 +693,7 @@ buttonHasName:
   options:
     content: true
     empty: true
+    attribute: title
     selector: "button"
 checkboxHasLabel:
   type: "label"
