- Removed :visible from area selector in tests.yml. Doesn't work on the area tag.

--- a/src/resources/tests.yml
+++ b/src/resources/tests.yml
@@ -544,7 +544,7 @@ areaHasAltValue:
     - "imagemap"
     - "content"
   options:
-    selector: "area:visible"
+    selector: "area"
     test: ":not(area[alt])"
 areaLinksToSoundFile:
   type: "selector"
