- Removed :visible from area test, doesn't seem to work

--- a/src/resources/tests.yml
+++ b/src/resources/tests.yml
@@ -558,7 +558,7 @@ areaHasAltValue:
     - "imagemap"
     - "content"
   options:
-    selector: "area:visible"
+    selector: "area"
     test: ":not(area[alt])"
 areaLinksToSoundFile:
   type: "selector"
