- Added missing yaml definition for headersAttrRefersToATableCell. Got missing after merge

--- a/src/resources/tests.yml
+++ b/src/resources/tests.yml
@@ -1829,6 +1829,21 @@ framesetMustHaveNoFramesSection:
     - "frame"
   options:
     selector: "frameset:not(frameset:has(noframes))"
+headersAttrRefersToATableCell:
+  type: "custom"
+  testability: 1
+  title:
+    en: "Table cell headers attrtibutes must within the same table have an associated data cell with the same id"
+    nl: "Tabel cellen met een headers attribuut moeten binnen dezelfde tabel een overeenkomende data cel hebben in het id attribuut dezelfde waarde"
+  description:
+    en: ""
+    nl: ""
+  guidelines: []
+  tags:
+    - "headers"
+    - "td"
+    - "th"
+  callback: "headersAttrRefersToATableCell"
 headerH1:
   type: "headingLevel"
   testability: 0
