--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "type": "git",
     "url": "git://github.com/kevee/quail.git"
   },
+  "main": "./quail.js",
+  "bin": {
+    "quail": "./bin/quail"
+  },
   "scripts": {
     "test": "grunt test --verbose"
   },
