--- a/package.json
+++ b/package.json
@@ -13,20 +13,36 @@
   "scripts": {
     "test": "grunt test --verbose"
   },
-  "dependencies" : {
+  "dependencies": {
     "jquery": ">1.4.2"
   },
   "devDependencies": {
     "bower": "~1.3.9",
+    "chai": "^1.9.2",
     "grunt": "~0.4.1",
-    "grunt-contrib-qunit": "~0.2.0",
+    "grunt-bower-task": "~0.4.0",
     "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-jshint": "~0.4.3",
-    "grunt-convert": "~0.1.5",
+    "grunt-contrib-qunit": "~0.2.0",
+    "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-watch": "~0.5.3",
+    "grunt-convert": "~0.1.5",
     "grunt-gh-pages": "~0.8.1",
-    "grunt-bower-task": "~0.4.0"
+    "grunt-karma": "^0.9.0",
+    "karma": "^0.12.24",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^0.1.5",
+    "karma-firefox-launcher": "^0.1.3",
+    "karma-ie-launcher": "^0.1.5",
+    "karma-mocha": "^0.1.9",
+    "karma-opera-launcher": "^0.1.0",
+    "karma-phantomjs-launcher": "^0.1.4",
+    "karma-requirejs": "^0.2.2",
+    "karma-safari-launcher": "^0.1.1",
+    "karma-sinon": "^1.0.3",
+    "mocha": "^1.21.5",
+    "requirejs": "^2.1.15",
+    "sinon": "^1.10.3"
   },
   "jam": {
     "dependencies": {
