JShinted phantom_evalutor.js

--- a/.jshintrc
+++ b/.jshintrc
@@ -11,7 +11,9 @@
     "guessLanguage": true,
     "process": true,
     "quail": true,
-    "quailBuilderTests": true
+    "quailBuilderTests": true,
+    "require": true,
+    "phantom": true
   },
   "immed": true,
   "indent": 2,
