Making concessions for console. Need to clean these up.

--- a/.jshintrc
+++ b/.jshintrc
@@ -13,7 +13,8 @@
     "quail": true,
     "quailBuilderTests": true,
     "require": true,
-    "phantom": true
+    "phantom": true,
+    "console": true
   },
   "immed": true,
   "indent": 2,
