--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,6 @@ lib/*
 test/quail-testing.jquery.js
 test/accessibility-tests/_tests.json
 test/quail-testrunner.js
-
 test/accessibility-tests/_tests.json
 test/core/_tests.json
+analyses/*
