--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "grunt-chmod": "^1.0.3",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-connect": "^0.8.0",
     "grunt-contrib-copy": "^0.6.0",
     "grunt-contrib-jshint": "~0.4.3",
     "grunt-contrib-qunit": "~0.2.0",
