--- a/package.json
+++ b/package.json
@@ -26,18 +26,19 @@
   "devDependencies": {
     "bower": "~1.3.9",
     "chai": "^1.9.2",
-    "grunt": "~0.4.1",
+    "grunt": "^0.4.5",
     "grunt-bower-task": "~0.4.0",
+    "grunt-chmod": "^1.0.3",
+    "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-copy": "^0.6.0",
     "grunt-contrib-jshint": "~0.4.3",
     "grunt-contrib-qunit": "~0.2.0",
     "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-copy": "^0.6.0",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-chmod": "^1.0.3",
     "grunt-convert": "~0.1.5",
     "grunt-gh-pages": "~0.8.1",
+    "grunt-jscs": "^0.8.1",
     "grunt-karma": "^0.9.0",
     "karma": "^0.12.24",
     "karma-chai": "^0.1.0",
