JSCS: Normalize to single quotes
This differs from jQuery, but appeared to be the predominant style in
this library

--- a/.jscsrc
+++ b/.jscsrc
@@ -1,6 +1,6 @@
 {
   "preset": "jquery",
-  "validateQuoteMarks": null,
+  "validateQuoteMarks": "'",
   "disallowKeywordsOnNewLine": null,
   "maximumLineLength": null,
   "requireDotNotation": null,
