--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "bower": "~1.3.9",
     "chai": "^1.9.2",
+    "glob": "^4.2.1",
     "grunt": "~0.4.1",
     "grunt-bower-task": "~0.4.0",
     "grunt-chmod": "^1.0.3",
@@ -59,6 +60,7 @@
     "karma-webdriver-launcher": "^0.2.0",
     "mocha": "^2.0.1",
     "requirejs": "^2.1.15",
+    "should": "^4.3.0",
     "sinon": "^1.10.3",
     "webdriverio": "^2.3.0"
   },
