--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "grunt-karma": "^0.9.0",
     "grunt-mocha-cli": "^1.10.0",
     "grunt-selenium-webdriver": "^0.2.431",
+    "http-server": "^0.7.3",
     "karma": "^0.12.24",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^0.1.5",
