--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "commander": "^2.3.0",
     "jquery": ">1.4.2",
     "phantomjs": "^1.9.10",
+    "q": "^1.1.2",
     "selenium-webdriver": "^2.44.0",
     "shelljs": "^0.3.0"
   },
   "devDependencies": {
     "bower": "~1.3.9",
     "chai": "^1.9.2",
+    "chai-as-promised": "^4.1.1",
     "glob": "^4.2.1",
     "grunt": "~0.4.1",
     "grunt-bower-task": "~0.4.0",
