--- a/package.json
+++ b/package.json
@@ -35,17 +35,14 @@
     "grunt-chmod": "^1.0.3",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-connect": "^0.8.0",
     "grunt-contrib-copy": "^0.6.0",
     "grunt-contrib-jshint": "~0.4.3",
-    "grunt-contrib-qunit": "~0.2.0",
     "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-convert": "~0.1.5",
+    "grunt-execute": "^0.2.2",
     "grunt-gh-pages": "~0.8.1",
     "grunt-karma": "^0.9.0",
-    "grunt-mocha-cli": "^1.10.0",
-    "grunt-selenium-webdriver": "^0.2.431",
     "http-server": "^0.7.3",
     "karma": "^0.12.24",
     "karma-chai": "^0.1.0",
