--- a/src/resources/tests.yml
+++ b/src/resources/tests.yml
@@ -838,6 +838,28 @@ cssDocumentMakesSenseStyleTurnedOff:
     - "color"
   options:
     selector: "link[rel=stylesheet], stylesheet, *[style]"
+cssTextHasContrast:
+  type: "color"
+  testability: 1
+  title:
+    en: "All elements should have appropriate color contrast"
+    nl: "Alle elementen moeten een toepasselijk kleurcontract hebben"
+  description:
+    en: "For users who have color blindness, all text or other elements should have a color contrast of 5:1."
+    nl: "Voor gebruikers met kleurenblindheid moeten alle tekst- en andere elementen een kleurcontrast hebben van 5:1."
+  guidelines:
+    wcag:
+      1.4.3:
+        techniques:
+          - "G18"
+  tags:
+    - "color"
+  components:
+    - "color"
+  options:
+    algorithm: "wcag"
+    selector: "*"
+    gradientSampleMultiplier: 3
 definitionListsAreUsed:
   type: "custom"
   testability: 0.5
