--- a/src/resources/wcag2.yml
+++ b/src/resources/wcag2.yml
@@ -163,7 +163,7 @@
     - passed: passed
       failed: failed
       tests:
-        - cssTextHasContrast
+        - colorFontContrast
 1.4.4:
   id: "wcag20:visual-audio-contrast-scale"
   level: "wcag20:level_aa"
