--- a/src/resources/wcag2.yml
+++ b/src/resources/wcag2.yml
@@ -164,6 +164,7 @@
       failed: failed
       tests:
         - colorFontContrast
+        - colorElementBehindContrast
 1.4.4:
   id: "wcag20:visual-audio-contrast-scale"
   level: "wcag20:level_aa"
