--- a/src/resources/wcag2.yml
+++ b/src/resources/wcag2.yml
@@ -165,6 +165,7 @@
       tests:
         - colorFontContrast
         - colorElementBehindContrast
+        - colorBackgroundImageContrast
 1.4.4:
   id: "wcag20:visual-audio-contrast-scale"
   level: "wcag20:level_aa"
