Pulled out colorElementBehindBackgroundImageContrast

--- a/src/resources/wcag2.yml
+++ b/src/resources/wcag2.yml
@@ -166,6 +166,7 @@
         - colorFontContrast
         - colorElementBehindContrast
         - colorBackgroundImageContrast
+        - colorElementBehindBackgroundImageContrast
 1.4.4:
   id: "wcag20:visual-audio-contrast-scale"
   level: "wcag20:level_aa"
