Pulled out colorElementBehindBackgroundGradientContrast

--- a/src/resources/wcag2.yml
+++ b/src/resources/wcag2.yml
@@ -168,6 +168,7 @@
         - colorBackgroundImageContrast
         - colorElementBehindBackgroundImageContrast
         - colorBackgroundGradientContrast
+        - colorElementBehindBackgroundGradientContrast
 1.4.4:
   id: "wcag20:visual-audio-contrast-scale"
   level: "wcag20:level_aa"
