--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "opener": "^1.4.0",
     "phantomjs": "^1.9.10",
     "q": "^1.1.2",
-    "selenium-webdriver": "^2.44.0",
-    "shelljs": "^0.3.0"
+    "selenium-webdriver": "^2.44.0"
   },
   "devDependencies": {
     "bower": "~1.3.9",
