--- a/bower.json
+++ b/bower.json
@@ -8,11 +8,12 @@
   ],
   "dependencies": {
     "node-htmlparser": "~2.0.0",
-    "RainbowVis-JS" : "https://github.com/anomal/RainbowVis-JS.git"
+    "RainbowVis-JS": "https://github.com/anomal/RainbowVis-JS.git",
+    "guessLanguage": "https://github.com/richtr/guessLanguage.js.git"
   },
   "devDependencies": {
     "qunit": "~1.14.0",
     "qunit-composite": "https://github.com/jquery/qunit-composite.git",
-    "guessLanguage": "https://github.com/richtr/guessLanguage.js.git"
+    "guessLanguage": "*"
   }
 }
