--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "opener": "^1.4.0",
     "phantomjs": "^1.9.10",
     "q": "^1.1.2",
+    "selenium-standalone": "2.43.1-5",
     "selenium-webdriver": "^2.44.0"
   },
   "devDependencies": {
