--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test": "grunt test --verbose"
   },
   "dependencies": {
+    "chai-spies": "^0.5.1",
     "commander": "^2.3.0",
     "jquery": ">1.4.2",
     "opener": "^1.4.0",
