--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "phantomjs": "^1.9.10",
     "q": "^1.1.2",
     "selenium-standalone": "2.43.1-5",
-    "selenium-webdriver": "^2.44.0"
+    "selenium-webdriver": "2.44.0",
+    "webdriverio": "2.3.0"
   },
   "devDependencies": {
     "bower": "~1.3.9",
@@ -65,8 +66,7 @@
     "requirejs": "^2.1.15",
     "should": "^4.3.0",
     "sinon": "^1.10.3",
-    "stdio": "^0.2.7",
-    "webdriverio": "^2.3.0"
+    "stdio": "^0.2.7"
   },
   "jam": {
     "dependencies": {
