--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "opener": "^1.4.0",
     "phantomjs": "^1.9.10",
     "q": "^1.1.2",
+    "http-server": "0.7.3",
     "selenium-standalone": "2.43.1-5",
     "selenium-webdriver": "2.44.0",
-    "webdriverio": "2.3.0"
+    "webdriverio": "2.3.0",
+    "stdio": "^0.2.7"
   },
   "devDependencies": {
     "bower": "~1.3.9",
@@ -36,7 +38,6 @@
     "grunt": "~0.4.1",
     "grunt-bower-task": "~0.4.0",
     "grunt-chmod": "^1.0.3",
-    "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-copy": "^0.6.0",
     "grunt-contrib-jshint": "~0.4.3",
@@ -46,7 +47,6 @@
     "grunt-execute": "^0.2.2",
     "grunt-gh-pages": "~0.8.1",
     "grunt-karma": "^0.9.0",
-    "http-server": "^0.7.3",
     "karma": "^0.12.24",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^0.1.5",
@@ -65,8 +65,7 @@
     "mocha": "^2.0.1",
     "requirejs": "^2.1.15",
     "should": "^4.3.0",
-    "sinon": "^1.10.3",
-    "stdio": "^0.2.7"
+    "sinon": "^1.10.3"
   },
   "jam": {
     "dependencies": {
