--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
 language: node_js
+
 node_js:
   - 0.10
+
+before_script:
+  - "curl -O http://selenium-release.storage.googleapis.com/2.43/selenium-server-standalone-2.43.1.jar"
+  - "java -jar selenium-server-standalone-2.43.1.jar 2>&1 >/dev/null &"
 
 install:
   - npm install grunt-cli -g
