--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,42 @@ before_script:
 install:
   - npm install grunt-cli -g
   - npm install
+
+env:
+  matrix:
+    - _BROWSER: "chrome"
+      _PLATFORM: "Windows_8"
+      _VERSION: "34"
+      _ENV: "desktop"
+    - _BROWSER: "firefox"
+      _PLATFORM: "Windows_8"
+      _VERSION: "29"
+      _ENV: "desktop"
+    - _BROWSER: "internet_explorer"
+      _PLATFORM: "Windows_8"
+      _VERSION: "10"
+      _ENV: "desktop"
+    - _BROWSER: "Safari"
+      _PLATFORM: "iOS"
+      _APP: "safari"
+      _DEVICENAME: "iPhone_Simulator"
+      _VERSION: "7.1"
+      _ENV: "mobile"
+    - _BROWSER: "Safari"
+      _PLATFORM: "iOS"
+      _APP: "safari"
+      _DEVICENAME: "iPad_Simulator"
+      _VERSION: "7.1"
+      _ENV: "mobile"
+    # - _PLATFORM: "Linux"
+    #   _BROWSER: "android"
+    #   _DEVICENAME: "Google_Nexus_7_HD_Emulator"
+    #   _VERSION: "4.3"
+    #   _ENV: "mobile"
+    # - _PLATFORM: "Linux"
+    #   _BROWSER: "Android"
+    #   _DEVICENAME: "Samsung_Galaxy_Nexus_Emulator"
+    #   _VERSION: "4.3"
+    #   _ENV: "mobile"
+    - _BROWSER: "phantomjs"
+      _ENV: "functional"
