--- a/package.json
+++ b/package.json
@@ -20,15 +20,16 @@
   "dependencies": {
     "chai-spies": "^0.5.1",
     "commander": "^2.3.0",
+    "deepmerge": "^0.2.7",
+    "http-server": "0.7.3",
     "jquery": ">1.4.2",
     "opener": "^1.4.0",
     "phantomjs": "^1.9.10",
     "q": "^1.1.2",
-    "http-server": "0.7.3",
     "selenium-standalone": "2.43.1-5",
     "selenium-webdriver": "2.44.0",
-    "webdriverio": "2.3.0",
-    "stdio": "^0.2.7"
+    "stdio": "^0.2.7",
+    "webdriverio": "2.3.0"
   },
   "devDependencies": {
     "bower": "~1.3.9",
