--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ install:
 env:
   matrix:
     - _BROWSER: "chrome"
-      _PLATFORM: "Windows_8"
+      _PLATFORM: "WIN8"
       _VERSION: "34"
       _ENV: "desktop"
     # - _BROWSER: "firefox"
