--- a/.travis.yml
+++ b/.travis.yml
@@ -13,16 +13,16 @@ install:
 
 env:
   matrix:
+    # - _BROWSER: "chrome"
+    #   _PLATFORM: "WIN8"
+    #   _VERSION: "34"
+    #   _ENV: "desktop"
     - _BROWSER: "firefox"
       _PLATFORM: "WIN8"
-      _VERSION: "18"
+      _VERSION: "29"
       _ENV: "desktop"
-    # - _BROWSER: "firefox"
-    #   _PLATFORM: "Windows_8"
-    #   _VERSION: "29"
-    #   _ENV: "desktop"
     # - _BROWSER: "internet_explorer"
-    #   _PLATFORM: "Windows_8"
+    #   _PLATFORM: "WIN8"
     #   _VERSION: "10"
     #   _ENV: "desktop"
     # - _BROWSER: "Safari"
