Flailing mor with travis and saucelabs

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,59 +1,22 @@
 language: node_js
-
 node_js:
-  - 0.10
-
+- 0.1
 before_script:
-  - "curl -O http://selenium-release.storage.googleapis.com/2.44/selenium-server-standalone-2.44.0.jar"
-  - "java -jar selenium-server-standalone-2.44.0.jar 2>&1 >/dev/null &"
-
+- curl -O http://selenium-release.storage.googleapis.com/2.44/selenium-server-standalone-2.44.0.jar
+- java -jar selenium-server-standalone-2.44.0.jar 2>&1 >/dev/null &
 install:
-  - npm install grunt-cli -g
-  - npm install
-
+- npm install grunt-cli -g
+- npm install
 addons:
   sauce_connect: true
-
 env:
   global:
-    SAUCE_USERNAME:
-      - secure: MS1TUD1f5k6FU+psyqjUXAm3gJbvDlNG4GDHWNshA6lNfTVeDxnCj1SccC/WgkrJkjE0/9KzLYmlO3sXg6ai6cmckbQknux/w4Mv+GgcZ2u4gdK83+PQfQxeeZT+AC3cW2n371tTsRjda+uj5krzEjurUPbdscBgjIEcIGzyV8Y=
-    SAUCE_ACCESS_KEY:
-      - secure: evDYryTZn58xU0AiLt4E+FrVhtqhq7R9vpT7yOXjWyqIN/8GV/0CAFxYq7KO4rhwnCepOYIlR8TrU8dfEtk73WQdKjswkqUwJhRPzhn5d87WVfvydmVM4K9eWyOguYS3a2+epWFsI99c1G5wWSc+hB5SLZi6ioPw85UFHqqailY=
+  - secure: QU2BjJsjEN/b85zWPJ1VwJPFcfmjdcE+h6/S/h04uQv20nDrViWJTJgot6Q6VMmKh0Z+BB/QocEFLc4XKlHBPdYdVq1xlf6wv7AZ63rWbn1tzw7gy0dqX0rmP/gn+Lev4mKJ0r+cQVyBh/uSaJYKRotMOBPqICdPA+9ncFgyurk=
+  - secure: DkVmhBxHBkRFeVwfAifwjYzPGgj2TO/wX27zchhE9cTaS9kWnmn6W7p/m5Pps6yhZocZhSfSedL31501L94zIGCivM2Svi0mlAbEoXFaBhbOvFEy3dHwLmnzR36hdcdkzXqPxymw0o14lw2DwBGrsldGOnFetlux/7G8+i0NYDk=
   matrix:
-    - _BROWSER: "chrome"
-      _PLATFORM: "Windows_8"
-      _VERSION: "34"
-      _ENV: "desktop"
-    # - _BROWSER: "firefox"
-    #   _PLATFORM: "Windows_8"
-    #   _VERSION: "29"
-    #   _ENV: "desktop"
-    # - _BROWSER: "internet_explorer"
-    #   _PLATFORM: "Windows_8"
-    #   _VERSION: "10"
-    #   _ENV: "desktop"
-    # - _BROWSER: "Safari"
-    #   _PLATFORM: "iOS"
-    #   _APP: "safari"
-    #   _DEVICENAME: "iPhone_Simulator"
-    #   _VERSION: "7.1"
-    #   _ENV: "mobile"
-    # - _BROWSER: "Safari"
-    #   _PLATFORM: "iOS"
-    #   _APP: "safari"
-    #   _DEVICENAME: "iPad_Simulator"
-    #   _VERSION: "7.1"
-    #   _ENV: "mobile"
-    # - _PLATFORM: "Linux"
-    #   _BROWSER: "android"
-    #   _DEVICENAME: "Google_Nexus_7_HD_Emulator"
-    #   _VERSION: "4.3"
-    #   _ENV: "mobile"
-    # - _PLATFORM: "Linux"
-    #   _BROWSER: "Android"
-    #   _DEVICENAME: "Samsung_Galaxy_Nexus_Emulator"
-    #   _VERSION: "4.3"
-    #   _ENV: "mobile"
-    - _BROWSER: "phantomjs"
-      _ENV: "functional"
+  - _BROWSER: chrome
+    _PLATFORM: Windows_8
+    _VERSION: '34'
+    _ENV: desktop
+  - _BROWSER: phantomjs
+    _ENV: functional
