--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 language: node_js
 node_js:
 - 0.1
+# Selenium 2.44.0 does not work with PhantomJS. Use 2.43.0
+# @see https://code.google.com/p/selenium/issues/detail?id=8088
 before_script:
-- curl -O http://selenium-release.storage.googleapis.com/2.44/selenium-server-standalone-2.44.0.jar
-- java -jar selenium-server-standalone-2.44.0.jar 2>&1 >/dev/null &
+- "curl -O http://selenium-release.storage.googleapis.com/2.43/selenium-server-standalone-2.43.1.jar"
+- "java -jar selenium-server-standalone-2.43.1.jar 2>&1 >/dev/null &"
 install:
 - npm install grunt-cli -g
 - npm install
