--- a/.travis.yml
+++ b/.travis.yml
@@ -28,21 +28,9 @@ env:
     _PLATFORM: "Windows_8"
     _VERSION: "10"
     _ENV: "desktop"
-  - _BROWSER: "safari"
-    _PLATFORM: "OS X 10.9"
-    _VERSION: "7"
-    _ENV: "desktop"
-  # - _BROWSER: "Safari"
-  #   _PLATFORM: "iOS"
-  #   _APP: "safari"
-  #   _DEVICENAME: "iPhone_Simulator"
-  #   _VERSION: "7.1"
-  #   _ENV: "mobile"
-  # - _BROWSER: "Safari"
-  #   _PLATFORM: "iOS"
-  #   _APP: "safari"
-  #   _DEVICENAME: "iPad_Simulator"
-  #   _VERSION: "7.1"
-  #   _ENV: "mobile"
+  # - _BROWSER: "safari"
+  #   _PLATFORM: "OS X 10.9"
+  #   _VERSION: "7"
+  #   _ENV: "desktop"
   - _BROWSER: phantomjs
     _ENV: functional
