--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/kevee/quail.git"
+    "url": "git://github.com/quailjs/quail.git"
   },
   "main": "./quail.js",
   "bin": {
