--- a/src/resources/tests.yml
+++ b/src/resources/tests.yml
@@ -2426,8 +2426,7 @@ imgHasAlt:
     - "image"
     - "content"
   options:
-    selector: "img:visible"
-    test: ":not(img[alt])"
+    selector: "img:not(img[alt])"
 imgHasLongDesc:
   testability: 1
   title:
